# E-commerce-App

./: .gitignore
backend/: .flake8  Dockerfile  docker-compose.yml  grafana_dashboard.json  prometheus.yml  pyproject.toml  pytest.ini
backend/docker/: celery.sh
backend/src/: config.py  constants.py  database.py  exceptions.py  logger.py  main.py  repository.py
backend/src/admin/: auth.py  views.py
backend/src/carts/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2023_08_31_2255-d2f89b22d68c_initial_migration.py  2023_11_20_2046-c676b48f0840_add_product_category_and_.py  2023_11_27_2032-eac16a14ee29_.py  2023_12_01_2147-bb950c71a7c6_.py  2023_12_01_2249-bad74d6bb056_.py  2023_12_05_2054-dc532918eb39_.py  2024_01_19_2038-1003855ee3b9_.py  2024_01_22_2116-2d72f676c37f_.py
backend/src/orders/: models.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/src/products/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/tasks/: celery.py  email_templates.py  scheduled.py  service.py
backend/src/tests/: conftest.py  mock_cart.json  mock_cart_product.json  mock_order.json  mock_products.json  mock_users.json
backend/src/tests/api_tests/test_users/: test_api.py
backend/src/tests/unit_tests/test_carts/: test_cart_service.py
backend/src/tests/unit_tests/test_orders/: test_order_service.py
backend/src/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
(+4 files in other folders)
